AWS_DevOpsProject/terraform-aws-infra/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.devops_vpc.id

  tags = {
    Name = "devops-igw"
  }
}
